fixed issue of small white gap at the bottom in mobile screen

--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,6 @@ body{
 }
 body,html{
   margin: 0;
-  padding-bottom: 1rem;
   height: 100%;
   overflow: hidden;
 }
